# pmdk

./: .cirrus.yml  .codecov.yml  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .pre-commit-config.yml  .travis.yml  .travis_config.sh  .version  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING.md  ChangeLog  GIT_VERSION  Gemfile  INSTALL.md  LICENSE  LICENSE.txt  Makefile  README.md  RELEASE_STEPS.md  SECURITY.md  VERSION  _config.yml  appveyor.yml  configure  index.md  libpmem.3.html  libvmem.3.html  meson.build  meson_options.txt  testconfig.sh
doc/: .gitignore  CMakeLists.txt  Makefile  README  RELEASE_STEPS.md  cppobj.Doxyfile  data_mover_dml_new.3.md  data_mover_sync_get_vdm.3.md  data_mover_sync_new.3.md  data_mover_threads_new.3.md  default.man  future_context_get_data.3.md  libpmem.3  libpmem.3.md  libpmemblk.3  libpmemblk.3.md  libpmemlog.3  libpmemlog.3.md  libpmemobj.3  libpmemobj.3.md  libpmempool.3  libpmempool.3.md  librpmem.3  librpmem.3.md  libvmem.3  libvmem.3.md  libvmmalloc.3  libvmmalloc.3.md  macros.man  manuals.txt  meson.build  miniasync_future.3.md.in  miniasync_vdm.3.md.in  miniasync_vdm.7.md  miniasync_vdm_dml.3.md.in  miniasync_vdm_dml.7.md  miniasync_vdm_synchronous.7.md  miniasync_vdm_threads.7.md  pmempool-check.1  pmempool-check.1.md  (+19 more)
doc/ctl/: ctl.5.md
doc/daxio/: .gitignore  daxio.1.md  meson.build
doc/libpmem/: .gitignore  libpmem.7.md  meson.build  pmem_flush.3.md  pmem_is_pmem.3.md  pmem_log_get_threshold.3.md  pmem_log_set_function.3.md  pmem_log_set_threshold.3.md  pmem_log_use_default_function.3  pmem_memmove_persist.3.md
doc/libpmem2/: .gitignore  libpmem2.7.md  libpmem2_async.7.md  libpmem2_unsafe_shutdown.7.md  meson.build  pmem2_async.3.md  pmem2_badblock_clear.3.md  pmem2_badblock_context_delete.3  pmem2_badblock_context_new.3.md  pmem2_badblock_next.3.md  pmem2_config.3.md  pmem2_config_clear_address.3.md  pmem2_config_get_alignment.3.md  pmem2_config_get_file_size.3.md  pmem2_config_new.3.md  pmem2_config_set_address.3.md  pmem2_config_set_fd.3.md  pmem2_config_set_handle.3  pmem2_config_set_length.3.md  pmem2_config_set_offset.3.md  pmem2_config_set_protection.3.md  pmem2_config_set_required_store_granularity.3.md  pmem2_config_set_sharing.3.md  pmem2_config_set_vdm.3  pmem2_config_set_vm_reservation.3.md  pmem2_config_setup.3.md  pmem2_deep_flush.3.md  pmem2_deep_sync.3.md  pmem2_deep_sync_fn.3.md  pmem2_errormsg.3.md  pmem2_get_drain_fn.3.md  pmem2_get_flush_fn.3.md  pmem2_get_memcpy_fn.3  pmem2_get_memmove_fn.3.md  pmem2_get_persist_fn.3.md  pmem2_map.3  pmem2_map.3.md  pmem2_map_delete.3.md  pmem2_map_from_existing.3.md  pmem2_map_get_address.3.md  (+32 more)
doc/libpmemblk/: .gitignore  libpmemblk.7.md  meson.build  pmemblk_async.3.md  pmemblk_bsize.3.md  pmemblk_check.3  pmemblk_check_version.3  pmemblk_create.3.md  pmemblk_ctl_get.3.md  pmemblk_ctl_set.3  pmemblk_read.3.md  pmemblk_set_zero.3.md  poolset.5.md
doc/libpmemcto/: libpmemcto.7.md  pmemcto_aligned_alloc.3.md  pmemcto_malloc.3.md  pmemcto_malloc_usable_size.3.md  pmemcto_open.3.md  pmemcto_set_root_pointer.3.md  pmemcto_stats_print.3.md  pmemcto_strdup.3.md  pmemcto_wcsdup.3.md
doc/libpmemlog/: .gitignore  libpmemlog.7  libpmemlog.7.md  meson.build  pmemlog_append.3.md  pmemlog_create.3.md  pmemlog_ctl_get.3.md  pmemlog_ctl_set.3  pmemlog_nbyte.3..md  pmemlog_nbyte.3.md  pmemlog_tell.3.md
doc/libpmemobj/: .gitignore  libpmemobj.7.md  meson.build  oid_is_null.3.md  pmemobj_action.3.md  pmemobj_alloc.3.md  pmemobj_ctl_get.3.md  pmemobj_first.3.md  pmemobj_list_insert.3.md  pmemobj_log_get_threshold.3.md  pmemobj_log_set_function.3.md  pmemobj_log_set_threshold.3.md  pmemobj_log_use_default_function.3  pmemobj_memcpy_persist.3.md  pmemobj_mutex_zero.3.md  pmemobj_open.3.md  pmemobj_root.3.md  pmemobj_tx_add_range.3.md  pmemobj_tx_alloc.3.md  pmemobj_tx_begin.3.md  pobj_layout_begin.3.md  pobj_layout_root.3  pobj_list_head.3.md  toid_declare.3.md  toid_is_null.3
doc/libpmempool/: .gitignore  libpmempool.7.md  meson.build  pmempool_check_end.3  pmempool_check_init.3.md  pmempool_feature_query.3.md  pmempool_rm.3.md  pmempool_sync.3.md
doc/libpmemset/: .gitignore  README.md  libpmemset.7.md  libpmemset_shutdown_state.7.md  meson.build  pmemset_badblock_clear.3.md  pmemset_config_delete.3  pmemset_config_new.3.md  pmemset_config_set_acceptable_states.3.md  pmemset_config_set_event_callback.3.md  pmemset_config_set_file_create_disposition.3.md  pmemset_config_set_require_store_granularity.3.md  pmemset_config_set_required_store_granularity.3.md  pmemset_config_set_reservation.3.md  pmemset_deep_flush.3.md  pmemset_delete.3  pmemset_descriptor_part_map.3.md  pmemset_drain.3.md  pmemset_errormsg.3.md  pmemset_first_part_map.3.md  pmemset_flush.3.md  pmemset_get_store_granularity.3.md  pmemset_map.3.md  pmemset_map_config_delete.3  pmemset_map_config_new.3.md  pmemset_map_config_set_length.3.md  pmemset_map_config_set_offset.3.md  pmemset_map_config_set_source.3.md  pmemset_memcpy.3  pmemset_memmove.3.md  pmemset_new.3.md  pmemset_next_part_map.3  pmemset_part_delete.3  pmemset_part_map.3.md  pmemset_part_map_by_address.3.md  pmemset_part_map_descriptor.3.md  pmemset_part_map_drop.3.md  pmemset_part_map_first.3.md  pmemset_part_new.3.md  pmemset_perror.3.md  (+20 more)
doc/librpmem/: .gitignore  README.md  librpmem.7.md  meson.build  rpmem_create.3.md  (+2 more)
examples/: .gitignore  CMakeLists.txt  Makefile  README  pmem_example.c  pmemblk_example.c  pmemlog_example.c  vmem_example.c
src/: .clang-format  .gitignore  LongPathSupport.props  Makefile  Makefile.env  Makefile.inc  NVML.sln  PMDK.sln  README  VMEM.sln  blk.c  blk.h  btt.c  btt.h  btt_layout.h  common.inc  data_mover_sync.c  data_mover_threads.c  jemalloc.cfg  libpmem.c  libpmem.map  libpmemblk.c  libpmemblk.map  libpmemlog.c  libpmemlog.map  libpmemobj.c  libpmemobj.map  libvmem.c  libvmem.map  log.c  log.h  meson.build  obj.c  obj.h  out.c  pmem.c  pmem.h  trn.c  trn.h  util.c  (+5 more)
testsuite/: .gitignore  RUNTESTLIB.PS1  RUNTESTS  RUNTESTS.PS1  RUNTESTS.py  meson.build  testconfig.py.example  testframework.py
(+11562 files in other folders)
