manpages_7_md += files(
    'libpmem.7.md',
    )

manpages_5_md += files(
    )

manpages_3_md += files(
    'pmem_flush.3.md',
    'pmem_is_pmem.3.md',
    'pmem_memmove_persist.3.md',
    )

manpages_1_md += files(
    )

manpages_3_dummy += files(
    'pmem_drain.3',
    'pmem_has_hw_drain.3',
    'pmem_has_auto_flush.3',
    'pmem_persist.3',
    'pmem_msync.3',
    'pmem_map_file.3',
    'pmem_deep_persist.3',
    'pmem_deep_flush.3',
    'pmem_deep_drain.3',
    'pmem_unmap.3',
    'pmem_memcpy_persist.3',
    'pmem_memset_persist.3',
    'pmem_memmove_nodrain.3',
    'pmem_memcpy_nodrain.3',
    'pmem_memset_nodrain.3',
    'pmem_memcpy.3',
    'pmem_memset.3',
    'pmem_memmove.3',
    'pmem_check_version.3',
    'pmem_errormsg.3',
    )