# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2022, Intel Corporation

manpages_7_md += files(
    'libpmem2.7.md',
    'libpmem2_unsafe_shutdown.7.md',
    )

manpages_5_md += files(
    )

manpages_3_md += files(
	'pmem2_errormsg.3.md',
	'pmem2_config_new.3.md',
	'pmem2_map_new.3.md',
	'pmem2_map_delete.3.md',
	'pmem2_map_get_address.3.md',
	'pmem2_map_get_size.3.md',
	'pmem2_source_from_fd.3.md',
	'pmem2_config_set_required_store_granularity.3.md',
	'pmem2_source_size.3.md',
	'pmem2_source_alignment.3.md',
	'pmem2_source_numa_node.3.md',
	'pmem2_config_set_length.3.md',
	'pmem2_config_set_offset.3.md',
	'pmem2_map_get_store_granularity.3.md',
	'pmem2_get_flush_fn.3.md',
	'pmem2_get_drain_fn.3.md',
	'pmem2_get_persist_fn.3.md',
	'pmem2_perror.3.md',
	'pmem2_get_memmove_fn.3.md',
	'pmem2_async.3.md',
	'pmem2_config_set_sharing.3.md',
	'pmem2_config_set_vm_reservation.3.md',
	'pmem2_vm_reservation_new.3.md',
	'pmem2_vm_reservation_get_address.3.md',
	'pmem2_vm_reservation_get_size.3.md',
	'pmem2_badblock_context_new.3.md',
	'pmem2_badblock_next.3.md',
	'pmem2_badblock_clear.3.md',
	'pmem2_config_set_protection.3.md',
	'pmem2_deep_flush.3.md',
	'pmem2_source_from_anon.3.md',
	'pmem2_source_device_id.3.md',
	'pmem2_source_device_usc.3.md',
	'pmem2_map_from_existing.3.md',
	'pmem2_source_get_fd.3.md',
	'pmem2_source_get_handle.3.md',
	'pmem2_vm_reservation_extend.3.md',
	'pmem2_vm_reservation_map_find.3.md',
	'pmem2_source_pread_mcsafe.3.md',
    )

manpages_1_md += files(
    )

manpages_3_dummy += files(
	'pmem2_config_delete.3',
	'pmem2_config_set_vdm.3',
	'pmem2_source_from_handle.3',
	'pmem2_source_delete.3',
	'pmem2_get_memset_fn.3',
	'pmem2_get_memcpy_fn.3',
	'pmem2_memcpy_async.3',
	'pmem2_memmove_async.3',
	'pmem2_memset_async.3',
	'pmem2_vm_reservation_delete.3',
	'pmem2_badblock_context_delete.3',
	'pmem2_vm_reservation_shrink.3',
	'pmem2_vm_reservation_map_find_first.3',
	'pmem2_vm_reservation_map_find_last.3',
	'pmem2_vm_reservation_map_find_next.3',
	'pmem2_vm_reservation_map_find_prev.3',
	'pmem2_source_pwrite_mcsafe.3',
    )