# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2022, Intel Corporation

manpages_7_md += files(
    'libpmemblk.7.md',
    )

manpages_5_md += files(
    )

manpages_3_md += files(
    'pmemblk_bsize.3.md',
    'pmemblk_create.3.md',
    'pmemblk_ctl_get.3.md',
    'pmemblk_read.3.md',
    'pmemblk_set_zero.3.md',
    )

manpages_1_md += files(
    )

manpages_3_dummy += files(
    'pmemblk_nblock.3',
    'pmemblk_open.3',
    'pmemblk_close.3',
    'pmemblk_write.3',
    'pmemblk_set_error.3',
    'pmemblk_check_version.3',
    'pmemblk_check.3',
    'pmemblk_errormsg.3',
    'pmemblk_set_funcs.3',
    'pmemblk_ctl_set.3',
    'pmemblk_ctl_exec.3',
    )