manpages_7_md += files(
    'libpmemlog.7.md',
    )

manpages_5_md += files(
    )

manpages_3_md += files(
    'pmemlog_append.3.md',
    'pmemlog_create.3.md',
    'pmemlog_ctl_get.3.md',
    'pmemlog_nbyte.3.md',
    'pmemlog_tell.3.md',
    )

manpages_1_md += files(
    )

manpages_3_dummy += files(
    'pmemlog_rewind.3',
    'pmemlog_walk.3',
    'pmemlog_open.3',
    'pmemlog_close.3',
    'pmemlog_appendv.3',
    'pmemlog_check_version.3',
    'pmemlog_check.3',
    'pmemlog_errormsg.3',
    'pmemlog_set_funcs.3',
    'pmemlog_ctl_set.3',
    'pmemlog_ctl_exec.3',
    )