# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2022, Intel Corporation

manpages_7_md += files(
    'libpmempool.7.md',
    )

manpages_5_md += files(
    )

manpages_3_md += files(
    'pmempool_check_init.3.md',
    'pmempool_feature_query.3.md',
    'pmempool_rm.3.md',
    'pmempool_sync.3.md',
    )

manpages_1_md += files(
    )

manpages_3_dummy += files(
    'pmempool_check.3',
    'pmempool_check_end.3',
    'pmempool_feature_enable.3',
    'pmempool_feature_disable.3',
    'pmempool_transform.3',
    'pmempool_check_version.3',
    'pmempool_errormsg.3',
    )